...
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_forward">Forward</string>
    <string name="cancel">Cancel</string>
    <string name="new_conversation_title">New conversation</string>
    <string name="action_archive">Archive</string>
    <string name="action_block">Block</string>
    <string name="action_call">Call</string>
    <string name="action_add_contact">Add to contacts</string>
    <string name="action_delete_conversation">Delete conversation</string>
    <string name="action_not_spam">Not spam</string>
    <string name="action_report_spam">Report spam</string>
    <plurals name="delete_messages_title">
        <item quantity="one">Delete %d message?</item>
        <item quantity="other">Delete %d messages?</item>
    </plurals>
    <string name="delete_messages_body">They will be permanently deleted from this device. This can\'t be undone.</string>
...
